--- a/app/src/main/res/xml/accessibility_service.xml
+++ b/app/src/main/res/xml/accessibility_service.xml
@@ -4,6 +4,7 @@
     android:accessibilityEventTypes="typeContextClicked|typeViewClicked"
     android:accessibilityFlags="flagRequestFilterKeyEvents"
     android:accessibilityFeedbackType="feedbackAllMask"
+    android:isAccessibilityTool="true"
     android:canRequestFilterKeyEvents="true"
     android:canPerformGestures="true"
     android:notificationTimeout="50"
