Add accessibility service description and link to settings
closes #68

--- a/app/src/main/res/xml/accessibility_service.xml
+++ b/app/src/main/res/xml/accessibility_service.xml
@@ -9,4 +9,5 @@
     android:canPerformGestures="true"
     android:notificationTimeout="50"
     android:canRetrieveWindowContent="true"
-    android:settingsActivity="" />
+    android:settingsActivity="com.enaboapps.switchify/.activities.MainActivity"
+    android:description="@string/accessibility_service_description" />
