--- a/app/src/main/res/xml/accessibility_service.xml
+++ b/app/src/main/res/xml/accessibility_service.xml
@@ -7,6 +7,6 @@
     android:canRequestFilterKeyEvents="true"
     android:canRetrieveWindowContent="true"
     android:description="@string/accessibility_service_description"
-    android:isAccessibilityTool="false"
+    android:isAccessibilityTool="true"
     android:notificationTimeout="50"
     android:settingsActivity="com.enaboapps.switchify/.activities.MainActivity" />
