--- a/app/src/main/res/drawable/keyboard_key_background.xml
+++ b/app/src/main/res/drawable/keyboard_key_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/> <!-- white color -->
-    <corners android:radius="10dp"/> <!-- rounded corners -->
+    <solid android:color="#6e97a7" />
+    <corners android:radius="10dp" /> <!-- rounded corners -->
 </shape>
