--- a/app/src/main/res/drawable/keyboard_background.xml
+++ b/app/src/main/res/drawable/keyboard_background.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/navy"/>
+    <gradient
+        android:type="linear"
+        android:angle="90"
+        android:startColor="#808080"
+        android:endColor="#000000" />
 </shape>
