Redesign keyboard to be more modern
closes #569

--- a/app/src/main/res/drawable/keyboard_key_background.xml
+++ b/app/src/main/res/drawable/keyboard_key_background.xml
@@ -1,5 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="#000000" />
-    <corners android:radius="10dp" /> <!-- rounded corners -->
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Base white layer -->
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#FFFFFF" />
+        </shape>
+    </item>
+
+    <!-- Gradient overlay for edges -->
+    <item>
+        <shape android:shape="rectangle">
+            <gradient
+                android:type="radial"
+                android:gradientRadius="100%p"
+                android:startColor="#00E0E0E0"
+                android:endColor="#FFE0E0E0"
+                android:centerX="0.5"
+                android:centerY="0.5" />
+        </shape>
+    </item>
+</layer-list>
