--- a/app/src/main/res/drawable/keyboard_background.xml
+++ b/app/src/main/res/drawable/keyboard_background.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:type="radial"
-        android:gradientRadius="100%p"
-        android:centerX="0.5"
-        android:centerY="0.5"
-        android:startColor="#6A1B9A"
-        android:endColor="#1A0033" />
+    <solid android:color="#001F3F" />
 </shape>
