--- a/app/src/main/res/drawable/keyboard_key_background_pinned.xml
+++ b/app/src/main/res/drawable/keyboard_key_background_pinned.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#808080" />
-    <corners android:radius="10dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <gradient
+        android:type="radial"
+        android:gradientRadius="100%p"
+        android:startColor="#C0C0C0"
+        android:endColor="#808080"
+        android:centerX="0.5"
+        android:centerY="0.5" />
 </shape>
